# synapse_mcp

./: .claudeignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  Cargo.toml  Dockerfile  GEMINI.md  HANDOVER.md  PLAN.md  README.md  architecture.md  claude-hook.sh  config.toml.example  docker-compose.yml  handover.md  prd.md  setup-hooks.sh  test_config.toml  test_file.txt
.claude/: context:onboard  get-context.md
.claude/context/: DOCS_RULES.md  PLAN.md  architecture.md  prd.md
.synapse/: README.md  performance.md  security.md
.synapse/architecture/: overview.md
.synapse/decisions/: adr_template.md
.synapse/rules/: coding_standards.md  performance_guidelines.md  rust_standards.md  security_guidelines.md  testing_strategy.md
benches/: rule_enforcement.rs
hooks/: claude-pre-write.sh
rules_examples/: .synapse.md
rules_examples/src/: .synapse.md
scripts/: claude-context-hook.sh  pre-commit-hook.sh  setup-hooks.sh  test_api.sh
src/: api_models.rs  auth.rs  cache.rs  config.rs  enforcement.rs  error.rs  formatting.rs  graph.rs  graph_pooled.rs  health.rs  indexer.rs  lib.rs  main.rs  mcp_server.rs  models.rs  rule_graph.rs  test_helpers.rs
src/.synapse/: rust-patterns.md
src/ast_analysis/: mod.rs  safe_unwrap_replacer.rs
src/cli/: context.rs  mod.rs  utils.rs
src/cli/commands/: check.rs  context.rs  enforce_context.rs  index.rs  init.rs  mod.rs  query.rs  status.rs
src/cli/templates/: generic.rs  mod.rs  python.rs  rust.rs  typescript.rs
src/db/: connection_manager.rs  mod.rs  pool.rs
src/mcp_server/: error_response.rs  pattern_enforcer.rs
src/rules/: discovery.rs  mod.rs  parser.rs
test_docs/: architecture_doc.md  decision_record.md  sample_rule.md  test_commit.md
tests/: ast_fixes_test.rs  auth_test.rs  cache_test.rs  connection_pool_test.rs  graph_test.rs  health_endpoints_test.rs  indexer_test.rs  integration_auth_simple.rs  integration_connection_pool.rs  integration_dual_hook.rs  models_test.rs  performance_test.rs  rule_graph_test.rs  rules_integration_test.rs  test_pre_write_validation.rs  test_safe_auto_fixes.rs
tests/.synapse/: test-standards.md
