[package]
name = "synapse_mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.0", features = ["full"] }
axum = "0.7"
neo4rs = "0.8.0"
clap = { version = "4.0", features = ["derive"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
regex = "1.0"
dotenv = "0.15"
config = "0.14"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2.0"
rayon = "1.10"

[dev-dependencies]
tempfile = "3.0"
axum-test = "15.0"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "rule_enforcement"
harness = false
